# usando_ollama_langchain

./: .gitignore  README.md  app.py  appy1.py  appy2.py  pyproject.toml  requirements.txt
src/streamlit_llama_app/: main.py
