[tool.poetry]
name = "usando-ollama-langchain"
version = "0.1.0"
description = ""
authors = ["paribe <paribe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "*"
langchain-community = "^0.3.0"  # Versão compatível
langchain-ollama = "^0.2.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
