[tool.poetry]
name = "streamlit-llama-app"
version = "0.1.0"
description = "Aplicação Streamlit com Llama 3"
authors = ["seu-nome <seu-email@example.com>"]
packages = [
    { include = "streamlit_llama_app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.0"
langchain = "*"
langchain-community = "^0.3.0"
langchain-ollama = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false